--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/express-validator": "^3.0.0",
+    "body-parser": "^1.19.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "mongodb": "^4.3.1",
     "typeorm": "^0.2.41",
     "winston": "^3.6.0"
