--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,8 @@
       "error",
       "ignorePackages",
       {
-        "ts": "never"
+        "ts": "never",
+        "js": "never"
       }
     ]
   },
