--- a/package.json
+++ b/package.json
@@ -33,20 +33,14 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
-    "mongodb": "^4.3.1",
+    "mongodb": "3",
     "typeorm": "^0.2.41",
     "winston": "^3.6.0"
   },
   "scripts": {
     "start": "set debug=* && NODE_PATH=./src ts-node-dev --respawn --transpile-only ./src/index.ts",
+    "test": "jest --testTimeout=3000 --config ./jest.config.js",
     "build": "rm -r build/; tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./build",
-    "test": "NODE_ENV=test jest --testTimeout=3000"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
+    "postbuild": "cp ormconfig.build.json build/ormconfig.json && cp .env build/ && cp package.json build/package.json && cp yarn.lock build/yarn.lock && cd build && yarn install --production --frozen-lockfile"
   }
 }
