--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   },
   "dependencies": {
     "@types/express-validator": "^3.0.0",
+    "@types/morgan": "^1.9.3",
     "body-parser": "^1.19.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "mongodb": "3",
+    "morgan": "^1.10.0",
     "typeorm": "^0.2.41",
     "winston": "^3.6.0"
   },
