--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,9 +5,9 @@
   "database": "RemoteCalculator",
   "synchronize": true,
   "logging": false,
-  "entities": ["src/entities/**/*.entity.ts"],
-  "migrations": ["src/migration/**/*.ts"],
-  "subscribers": ["src/subscriber/**/*.ts"],
+  "entities": ["src/features/**/*.entity.{ts,js}"],
+  "migrations": ["src/migration/**/*.{ts,js}"],
+  "subscribers": ["src/subscriber/**/*.{ts,js}"],
   "cli": {
     "entitiesDir": "src/entities",
     "migrationsDir": "src/migration",
