--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,8 @@ REMOTE_CALCULATOR_HTTP_PORT=6160
 
 REMOTE_CALCULATOR_HTTP_LOG_ENABLED=true
 REMOTE_CALCULATOR_HTTP_LOG_FILE=logs/remote-calculator-http.log
-REMOTE_CALCULATOR_HTTP_LOG_FLUSH_INTERVAL=10
+REMOTE_CALCULATOR_HTTP_LOG_FLUSH_INTERVAL=10 // in seconds
 
 REMOTE_CALCULATOR_DB_LOG_ENABLED=true
 REMOTE_CALCULATOR_DB_LOG_FILE=logs/remote-calculator-db.log
-REMOTE_CALCULATOR_DB_LOG_FLUSH_INTERVAL=10
+REMOTE_CALCULATOR_DB_LOG_FLUSH_INTERVAL=10 // in seconds
